PROJECT(swig_test)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(test_swig.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(test_swig.i PROPERTIES SWIG_FLAGS "-c++")
SWIG_ADD_MODULE(test_swig python test_swig.i test_swig.cpp)
SWIG_LINK_LIBRARIES(test_swig ${PYTHON_LIBRARIES})

ADD_EXECUTABLE(test test_swig.cpp main.cpp)

